Fixed: Constrain slider range: Snap after release
Added graphical icons to bar chart elements
Fixed: -weight in pounds triple numbers readout on gray slider do not fit inside box alloted
Fixed: -dude is too tall (head goes off screen) at 5'9"
Calorie editor dialogs pop up south, to not obscure main area, also is smaller
Added graphs
Added ability to change units between metric and english
Fixed BMR to be a function of FFM, not FFM%
Lightened up intake colors
Added reset all button

0.00.14