@@ -1,3 +1,4 @@
+Added better behavior for heart/health indicator, based on BMI
 Fixed: Constrain slider range: Snap after release
 Added graphical icons to bar chart elements
 Fixed: -weight in pounds triple numbers readout on gray slider do not fit inside box alloted
